<resources>
    <string name="app_name">ContractBak</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>


    <string name="click_search_phone">点击搜索手机号</string>
    <string name="confirm_to_add">确认添加</string>
    <string name="checked_all">全选</string>
    <string name="contact_is_add">已添加</string>
    <string name="call_next">连续拨打</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_language">选择一种语言</string>
    <string name="lan_chinese">中文</string>
    <string name="lan_en">英文</string>
    <string name="lan_zh_rTYW">繁体中文</string>
    <string name="Follow_the_system">跟随系統</string>


    <string name="Phone_Clone">手机克隆</string>
    <string name="new_phone">新手机</string>
    <string name="Old_phone">旧手机</string>
    <string name="Connect_old_phone">连接旧手机</string>
    <string name="Quick_Download">快捷下载</string>
    <string name="Scan_QR_code">扫描二维码</string>
    <string name="Contacts">通讯录</string>
    <string name="Gallery">相册</string>
    <string name="Documents">文档</string>
    <string name="Calendar">日历</string>
    <string name="Transfer_rate">传输速率</string>
    <string name="Transfer_percent">传输百分比</string>
    <string name="Progress_Bar">进度条</string>
    <string name="Rate_us">给个好评</string>
    <string name="Privacy_Policy">隐私政策</string>
    <string name="Terms_of_Service">用户协议</string>
    <string name="Share_with_friends">分享给好友</string>
    <string name="Cancel">取消</string>
    <string name="Start_transfer">开始传输</string>
    <string name="All_selected">已全选</string>
    <string name="share_to">分享到</string>
    <string name="open">在旧设备打开</string>
    <string name="open_2"> “手机克隆”</string>
    <string name="open_3"> , 选择 “这是旧手机” </string>
    <string name="open_4"> 扫描下方二维码建立连接 </string>
    <string name="download">如果旧手机没安装最新版手机克隆，将无法进行文件转移。</string>
    <string name="download_2">请点击此处下载最新版本</string>
    <string name="install">旧手机安装手机克隆</string>
    <string name="yingyong">或者在应用商城搜索“手机克隆”找到我们</string>
    <string name="QR">在新设备上选择【新手机】生成二维码</string>
    <string name="neirong">选择传输内容</string>
    <string name="huoquzhong">获取中</string>
</resources>