<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:id="@+id/download_img_back"
        android:layout_width="@dimen/textSize12"
        android:layout_height="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@mipmap/img_back"/>
    <TextView
        android:id="@+id/tv_old"
        android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/download_img_back"
        android:layout_marginLeft="30dp"
        android:text="@string/Quick_Download"
        android:textSize="20sp"
        android:textColor="#333333"/>
    <FrameLayout
        android:id="@+id/express_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_old"
        app:layout_constraintBottom_toTopOf="@+id/im"/>
    <ImageView
        android:id="@+id/im"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@mipmap/rqz"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="100dp"
        app:layout_constraintTop_toBottomOf="@id/im">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install"
            android:textColor="#333333"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="60dp"
        app:layout_constraintTop_toBottomOf="@id/linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yingyong"
            android:textColor="#666666"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>