<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/menu_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@mipmap/menu"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/name_clone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone_Clone"
        android:textSize="25sp"
        android:textColor="#333333"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <FrameLayout
        android:id="@+id/express_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/name_clone"
        app:layout_constraintBottom_toTopOf="@+id/constrain_layout"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_clone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="80dp">

        <LinearLayout
            android:id="@+id/lin"
            app:layout_constraintTop_toTopOf="@id/constrain_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/news"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/img_new"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <Button
                android:id="@+id/old"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="@mipmap/img_old"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/constrain_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="10dp">

        <LinearLayout
            app:layout_constraintTop_toTopOf="@id/cons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_phone"
                android:textSize="20sp"
                android:textColor="#333333"
                android:layout_marginRight="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:text="@string/Old_phone"
                android:textSize="20sp"
                android:textColor="#333333"
                android:layout_marginLeft="50dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@mipmap/page_bkg"/>

</androidx.constraintlayout.widget.ConstraintLayout>